# xpp2graph

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  codex_aotgraph_prd.md  docker-compose.yml  pyproject.toml
docs/: SysMessageButtonViewModel.xml  api_overview.md  assistant_tooling.md  chat_ui.md  embeddings_layer.md  explorer_ui.md  ingestion_pipeline.md  ir_schema_overview.md
scripts/: export-env.ps1
src/: __init__.py
src/api/: __init__.py  models.py  queries.py  server.py
src/assistant/: __init__.py  toolkit.py
src/codex_aotgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: __init__.py  settings.py
src/embeddings/: __init__.py  __main__.py  client.py  pipeline.py  store.py  text.py
src/graph/: __init__.py  loader.py  schema.py
src/ir/: __init__.py  models.py
src/pipeline/: __init__.py  __main__.py  ingest.py  parser.py
src/ui/: __init__.py
src/ui/templates/: assistant.html  explorer.html
